Name:                ansi-terminal
Version:             1.0
Cabal-Version:       >= 1.8
Category:            User Interfaces
Synopsis:            Simple ANSI terminal support
Description:         ANSI terminal support for Haskell: allows cursor movement,
                     screen clearing, color output, showing or hiding the
                     cursor, and changing the title. Works on UNIX and
                     Windows 10.
License:             BSD3
License-File:        LICENSE
Author:              Max Bolingbroke
Maintainer:          Mike Pilgrem <public@pilgrem.com>, Roman Cheplyaka <roma@ro-che.info>
Homepage:            https://github.com/feuerbach/ansi-terminal
Build-Type:          Simple

Extra-Source-Files:     src/includes/Common-Safe-Haskell.hs
                        CHANGELOG.md
                        README.md

Source-repository head
  type:     git
  location: git://github.com/feuerbach/ansi-terminal.git

Flag Example
        Description:    Build the example application
        Default:        False

Library
        Hs-Source-Dirs:         src
        Exposed-Modules:        System.Console.ANSI
                                System.Console.ANSI.Codes
                                System.Console.ANSI.Types

        Include-Dirs:           src/includes

        Build-Depends:          base >= 4.3.0.0 && < 5
                              , colour >=2.1.0
        if os(windows)
                Build-Depends:          Win32 >= 2.0
                Cpp-Options:            -DWINDOWS
                Other-Modules:          System.Console.ANSI.Windows.Foreign
                                        System.Win32.Compat

        Extensions:             CPP
                                ForeignFunctionInterface

        Ghc-Options:                    -Wall

Executable ansi-terminal-example
        Hs-Source-Dirs:         app
        Main-Is:                Example.hs
        Build-Depends:          base >= 4.3.0.0 && < 5
                              , ansi-terminal
                              , colour
        Ghc-Options:            -Wall
        if !flag(example)
                Buildable:              False
